# ambientmapper

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
.github/workflows/: test.yml  tests.yml
configs/: example.json
plans/: 2026-04-03_reclass_within_topk_rescued_composite.md  2026-04-04_assign_score_resume.md
src/ambientmapper/: _filtered_io.py  assign.py  assign_streaming.py  chunks.py  clean_bams.py  cli.py  config.py  dag.py  data.py  decontam.py  extract.py  filtering.py  genotyping.py  interpool.py  merge.py  normalization.py  pipeline.py  plate.py  sentinels.py  summary.py  utils.py
src/ambientmapper/data/: __init__.py
tests/: test_chunks_parquet.py  test_cli_run_args.py  test_e2e_parquet.py  test_extract_parquet.py  test_filter_parquet.py  test_qc_schema.py  test_smoke.py
