[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ambientmapper"
version = "0.1.0"
description = "Ambient contamination cleaning for multi-genome mappings (single-cell, scifi-ATAC)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Fabio Gomez"}]
keywords = ["single-cell", "ATAC-seq", "ambient", "multi-genome", "bioinformatics"]
dependencies = [
  "pysam>=0.22",
  "pandas>=2.0",
  "numpy>=1.24",
  "scipy>=1.10",
  "typer>=0.9",
  "pyarrow>=14.0",
  "tqdm>=4.66",
]

[project.scripts]
ambientmapper = "ambientmapper.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
